--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "e2e": "protractor test/protractor.conf.js",
     "report-coverage": "codecov",
     "lint": "eslint ./*.js ./src/**/*.js ./demos/**/*.js",
-    "stylelint": "stylelint src/dataTable.less src/themes/*.less src/components/menu/menu.less src/components/popover/popover.less"
+    "stylelint": "stylelint src/dataTable.css src/themes/*.css src/components/menu/menu.css src/components/popover/popover.css"
   },
   "peerDependencies": {
     "angular": ">=1.4.x <2.0.0"
@@ -76,9 +76,9 @@
     "gulp-babel": "6.1.2",
     "gulp-changed": "^1.2.1",
     "gulp-header": "^1.2.2",
-    "gulp-less": "^3.0.3",
     "gulp-ng-annotate": "^2.0.0",
     "gulp-plumber": "^1.0.1",
+    "gulp-postcss": "^6.4.0",
     "gulp-protractor": "^3.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.3",
@@ -97,7 +97,7 @@
     "karma-mocha-reporter": "^2.2.3",
     "karma-sauce-launcher": "^1.1.0",
     "karma-sinon": "^1.0.5",
-    "less-loader": "^4.0.3",
+    "postcss-cssnext": "^2.10.0",
     "raw-loader": "^0.5.1",
     "resolve-url-loader": "^2.0.2",
     "rollup": "^0.41.1",
