--- a/package.json
+++ b/package.json
@@ -91,15 +91,13 @@
     "karma-angular": "0.0.6",
     "karma-babel-preprocessor": "^6.0.1",
     "karma-browserify": "^5.1.1",
+    "karma-chrome-launcher": "^2.2.0",
     "karma-coverage": "^1.1.1",
     "karma-jasmine": "^1.1.0",
     "karma-mocha-reporter": "^2.2.3",
-    "karma-phantomjs-launcher": "1.0.2",
-    "karma-phantomjs-shim": "^1.4.0",
     "karma-sauce-launcher": "^1.1.0",
     "karma-sinon": "^1.0.5",
     "less-loader": "^4.0.3",
-    "phantomjs-prebuilt": "^2.1.7",
     "raw-loader": "^0.5.1",
     "resolve-url-loader": "^2.0.2",
     "rollup": "^0.41.1",
