--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,3 +1,11 @@
 {
-  "extends": "stylelint-config-standard"
+  "extends": "stylelint-config-standard",
+  "plugins": [
+    "stylelint-order"
+  ],
+  "rules": {
+    "property-no-vendor-prefix": true,
+    "value-no-vendor-prefix": true,
+    "order/properties-alphabetical-order": true
+  }
 }
