--- a/package.json
+++ b/package.json
@@ -105,8 +105,9 @@
     "sinon": "^1.17.6",
     "style-loader": "^0.17.0",
     "stylefmt": "^5.0.3",
-    "stylelint": "^7.7.1",
-    "stylelint-config-standard": "^15.0.1",
+    "stylelint": "^8.0.0",
+    "stylelint-config-standard": "^17.0.0",
+    "stylelint-order": "^0.4.1",
     "url-loader": "^0.5.8",
     "vinyl-paths": "^2.1.0",
     "watchify": "^3.7.0",
