--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "gulp-angular-protractor": "^0.3.0",
     "gulp-babel": "6.1.2",
     "gulp-changed": "^1.2.1",
+    "gulp-ejs": "^3.0.1",
     "gulp-header": "^1.2.2",
     "gulp-ng-annotate": "^2.0.0",
     "gulp-plumber": "^1.0.1",
