--- a/package.json
+++ b/package.json
@@ -55,13 +55,8 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.24.1",
-    "babelify": "^7.3.0",
     "bardjs": "^0.1.8",
     "browser-sync": "^2.7.2",
-    "browserify": "^14.0.0",
-    "browserify-istanbul": "^2.0.0",
-    "codecov": "^1.0.1",
-    "css-loader": "^0.28.1",
     "del": "^2.2.0",
     "eslint": "^3.19.0",
     "eslint-config-airbnb-base": "^11.0.0",
@@ -70,7 +65,6 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jasmine": "^2.2.0",
     "eslint-plugin-protractor": "^1.32.0",
-    "file-loader": "^0.11.1",
     "gulp": "^3.8.11",
     "gulp-angular-protractor": "^0.3.0",
     "gulp-babel": "6.1.2",
@@ -85,36 +79,23 @@
     "gulp-replace": "^0.5.3",
     "gulp-uglify": "^2.0.0",
     "gulp-util": "^3.0.8",
-    "isparta": "^4.0.0",
     "istanbul": "^0.4.5",
     "jasmine-core": "^2.5.2",
     "karma": "~1.4.1",
     "karma-angular": "0.0.6",
     "karma-babel-preprocessor": "^6.0.1",
-    "karma-browserify": "^5.1.1",
     "karma-chrome-launcher": "^2.2.0",
     "karma-coverage": "^1.1.1",
     "karma-jasmine": "^1.1.0",
     "karma-mocha-reporter": "^2.2.3",
-    "karma-sauce-launcher": "^1.1.0",
-    "karma-sinon": "^1.0.5",
     "postcss-cssnext": "^2.10.0",
-    "postcss-loader": "^2.0.6",
-    "raw-loader": "^0.5.1",
-    "resolve-url-loader": "^2.0.2",
     "rollup": "^0.41.1",
     "run-sequence": "^1.1.0",
-    "sinon": "^1.17.6",
-    "style-loader": "^0.17.0",
     "stylefmt": "^5.0.3",
     "stylelint": "^8.0.0",
     "stylelint-config-standard": "^17.0.0",
     "stylelint-order": "^0.4.1",
-    "url-loader": "^0.5.8",
-    "vinyl-paths": "^2.1.0",
-    "watchify": "^3.7.0",
-    "webpack": "^2.4.1",
-    "webpack-dev-server": "^2.4.5"
+    "vinyl-paths": "^2.1.0"
   },
   "babel": {
     "sourceMaps": false,
