--- a/package.json
+++ b/package.json
@@ -65,8 +65,9 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jasmine": "^2.2.0",
     "eslint-plugin-protractor": "^1.32.0",
-    "gulp": "^3.8.11",
+    "gulp": "^3.9.1",
     "gulp-angular-protractor": "^0.3.0",
+    "gulp-better-rollup": "^1.1.1",
     "gulp-babel": "6.1.2",
     "gulp-changed": "^1.2.1",
     "gulp-ejs": "^3.0.1",
@@ -77,6 +78,7 @@
     "gulp-protractor": "^3.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.3",
+    "gulp-sourcemaps": "^2.6.1",
     "gulp-uglify": "^2.0.0",
     "gulp-util": "^3.0.8",
     "istanbul": "^0.4.5",
@@ -89,7 +91,6 @@
     "karma-jasmine": "^1.1.0",
     "karma-mocha-reporter": "^2.2.3",
     "postcss-cssnext": "^2.10.0",
-    "rollup": "^0.41.1",
     "run-sequence": "^1.1.0",
     "stylefmt": "^5.0.3",
     "stylelint": "^8.0.0",
@@ -106,5 +107,5 @@
     "moduleIds": false,
     "comments": false,
     "compact": false
-  }
+  },
 }
