--- a/package.json
+++ b/package.json
@@ -40,15 +40,12 @@
     "angular": ">=1.4.x <2.0.0"
   },
   "devDependencies": {
-    "angular": "1.6.5",
-    "angular-mocks": "1.6.5",
+    "angular": "1.6.6",
+    "angular-mocks": "1.6.6",
     "babel-core": "^6.9.0",
     "babel-eslint": "^7.0.0",
-    "babel-loader": "^7.0.0",
     "babel-plugin-external-helpers": "^6.5.0",
-    "babel-plugin-rewire": "^1.0.0",
     "babel-plugin-root-import": "^5.1.0",
-    "babel-plugin-transform-es2015-modules-amd": "^6.8.0",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.8.0",
     "babel-plugin-transform-es2015-modules-umd": "^6.8.0",
     "babel-plugin-transform-runtime": "^6.23.0",
@@ -57,55 +54,46 @@
     "babel-register": "^6.24.1",
     "bardjs": "^0.1.8",
     "browser-sync": "^2.7.2",
-    "del": "^2.2.0",
-    "eslint": "^3.19.0",
+    "del": "^3.0.0",
+    "eslint": "^4.5.0",
     "eslint-config-airbnb-base": "^11.0.0",
     "eslint-config-angular": "^0.5.0",
-    "eslint-plugin-angular": "^1.6.1",
+    "eslint-plugin-angular": "^3.1.1",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jasmine": "^2.2.0",
     "eslint-plugin-protractor": "^1.32.0",
     "gulp": "^3.9.1",
-    "gulp-angular-protractor": "^0.3.0",
+    "gulp-angular-protractor": "^1.0.0",
+    "gulp-babel": "7.0.0",
     "gulp-better-rollup": "^1.1.1",
-    "gulp-babel": "6.1.2",
-    "gulp-changed": "^1.2.1",
+    "gulp-clean-css": "^3.7.0",
+    "gulp-concat": "^2.6.1",
     "gulp-ejs": "^3.0.1",
     "gulp-header": "^1.2.2",
     "gulp-ng-annotate": "^2.0.0",
+    "gulp-better-rollup": "^1.1.1",
     "gulp-plumber": "^1.0.1",
-    "gulp-postcss": "^6.4.0",
-    "gulp-protractor": "^3.0.0",
+    "gulp-postcss": "^7.0.0",
+    "gulp-protractor": "^4.1.0",
     "gulp-rename": "^1.2.2",
-    "gulp-replace": "^0.5.3",
     "gulp-sourcemaps": "^2.6.1",
-    "gulp-uglify": "^2.0.0",
+    "gulp-uglify": "^3.0.0",
     "gulp-util": "^3.0.8",
     "istanbul": "^0.4.5",
     "jasmine-core": "^2.5.2",
-    "karma": "~1.4.1",
+    "karma": "~1.7.1",
     "karma-angular": "0.0.6",
     "karma-babel-preprocessor": "^6.0.1",
     "karma-chrome-launcher": "^2.2.0",
     "karma-coverage": "^1.1.1",
     "karma-jasmine": "^1.1.0",
     "karma-mocha-reporter": "^2.2.3",
-    "postcss-cssnext": "^2.10.0",
-    "run-sequence": "^1.1.0",
-    "stylefmt": "^5.0.3",
+    "postcss-cssnext": "^3.0.2",
+    "rollup-stream": "^1.23.1",
+    "run-sequence": "^2.1.0",
+    "stylefmt": "^6.0.0",
     "stylelint": "^8.0.0",
     "stylelint-config-standard": "^17.0.0",
-    "stylelint-order": "^0.4.1",
-    "vinyl-paths": "^2.1.0"
-  },
-  "babel": {
-    "sourceMaps": false,
-    "presets": [
-      "es2015",
-      "stage-0"
-    ],
-    "moduleIds": false,
-    "comments": false,
-    "compact": false
-  },
+    "stylelint-order": "^0.6.0"
+  }
 }
